Switch from ARDL to VAR example; continue work in manuscript

--- a/Ref/2017_03_IntroGretl_Tarassow.tex
+++ b/Ref/2017_03_IntroGretl_Tarassow.tex
@@ -273,7 +273,7 @@
 		\item Think of a dataset as a big matrix. To make sense of a regression one needs to know:
 		\begin{itemize}
 			\item What the columns and rows refer to?
-			\item Are the rows representing time period: (i) whas is the sample beginning and sample end, (ii) at what frequency were data recorded?
+			\item Are the rows representing time period: (i) what is the sample beginning and sample end, (ii) at what frequency were data recorded?
 		\end{itemize}
 		\item In econometric software the dataset is typically \textit{not} a matrix as such but a richer structure. \\
 		$ \Rightarrow $ part or all of the dataset can be turned into a matrix on demand.
@@ -320,7 +320,7 @@
 		netlib, BLAS, lapack, FFTW and others) %\pause
 		\item Transition to development of gretl via hansl (function
 		packages, with optional GUI integration) %\pause
-		\item Some ``legacy'' formulations and inconsistencies, but hansl is much cleaner and easier to learn than many others (Stata, Eviews,	even R); OK, I may be a little biased here \texttt{;-)}
+		\item Some ``legacy'' formulations and inconsistencies, but hansl is much cleaner and easier to learn than many others (Stata, Eviews, even R); OK, I may be a little biased here \texttt{;-)}
 	\end{itemize}
 \end{frame}
 
